fix: adjust API schema and repository adjustments
